# SDR

./: AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Readme.md  SECURITY.md  SPEC_SHEET.md  build_installer.bat  build_portable.sh  build_windows.bat  build_windows.ps1  claude.md  installer.iss  pyproject.toml  sdr_module.spec
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: dual_rx_example.py  text_encoding_example.py
examples/plugins/noise_filter/: plugin.json  plugin.py
examples/plugins/weather_sensor/: __init__.py  plugin.json  plugin.py
src/sdr_module/: __init__.py  cli.py
src/sdr_module/antenna_array/: __init__.py  adaptive_beamformer.py  array_config.py  array_controller.py  beamformer.py  calibration.py  cross_correlator.py  doa.py  timestamped_buffer.py
src/sdr_module/core/: __init__.py  config.py  device_manager.py  dual_sdr.py  frequency_manager.py  sample_buffer.py
src/sdr_module/devices/: __init__.py  base.py  hackrf.py  mxk2_keyer.py  rtlsdr.py
src/sdr_module/dsp/: __init__.py  afc.py  callsign.py  classifiers.py  demodulators.py  filters.py  frequency_lock.py  protocols.py  qrp.py  recording.py  scanner.py  signal_meter.py  spectrum.py  sstv.py
src/sdr_module/gui/: __init__.py  __main__.py  app.py  callsign_panel.py  control_panel.py  decoder_panel.py  device_dialog.py  main_window.py  natlangchain_panel.py  qrp_panel.py  radio_tuner.py  signal_meter_widget.py  spectrum_widget.py  sstv_panel.py  waterfall_widget.py
src/sdr_module/plugins/: __init__.py  base.py  manager.py  registry.py
src/sdr_module/protocols/: __init__.py  base.py  (+4 more)
tests/: __init__.py  test_antenna_array.py  test_antenna_array_phase2.py  test_antenna_array_phase3.py  test_conversions.py  test_device_manager.py  test_dual_sdr.py  test_encoders.py  test_filters.py  test_framework.py  test_frequency_manager.py  test_gui.py  test_iq.py  test_mxk2_keyer.py  test_plugins.py  test_radio_tuner.py  test_sample_buffer.py  test_ui_components.py
tools/: README_TEXT_ENCODER.md  text_encoder.py
(+10 files in other folders)
