[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr-module"
version = "0.1.0"
description = "Dual-SDR system for RTL-SDR and HackRF One"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: Signal Processing",
]
keywords = ["sdr", "rtl-sdr", "hackrf", "radio", "dsp", "signal-processing"]

dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
rtlsdr = [
    "pyrtlsdr>=0.2.92",
]
hackrf = [
    "hackrf>=1.0.0",
]
full = [
    "pyrtlsdr>=0.2.92",
    "hackrf>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kase1111-hash/SDR"
Repository = "https://github.com/kase1111-hash/SDR"
Issues = "https://github.com/kase1111-hash/SDR/issues"

[project.scripts]
sdr-scan = "sdr_module.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
